--- a/index.html
+++ b/index.html
@@ -17,95 +17,95 @@
     </section>
 
     <section class="labo">
-        <div><p>H</p></div>
-        <div><p>He</p></div>
-        <div><p>Li</p></div>
-        <div><p>Be</p></div>
-        <div><p>B</p></div>
-        <div><p>C</p></div>
-        <div><p>N</p></div>
-        <div><p>O</p></div>
-        <div><p>F</p></div>
-        <div><p>Ne</p></div>
-        <div><p>Na</p></div>
-        <div><p>MG</p></div>
-        <div><p>Al</p></div>
-        <div><p>Si</p></div>
-        <div><p>P</p></div>
-        <div><p>S</p></div>
-        <div><p>Cl</p></div>
-        <div><p>Ar</p></div>
-        <div><p>K</p></div>
-        <div><p>Ca</p></div>
-        <div><p>Sc</p></div>
-        <div><p>Ti</p></div>
-        <div><p>V</p></div>
-        <div><p>Cr</p></div>
-        <div><p>Mn</p></div>
-        <div><p>Fe</p></div>
-        <div><p>Co</p></div>
-        <div><p>Ni</p></div>
-        <div><p>Cu</p></div>
-        <div><p>Zn</p></div>
-        <div><p>Ga</p></div>
-        <div><p>Ge</p></div>
-        <div><p>As</p></div>
-        <div><p>Se</p></div>
-        <div><p>Br</p></div>
-        <div><p>Kr</p></div>
-        <div><p>Rb</p></div>
-        <div><p>Sr</p></div>
-        <div><p>Y</p></div>
-        <div><p>Zr</p></div>
-        <div><p>Nb</p></div>
-        <div><p>Mo</p></div>
-        <div><p>Tc</p></div>
-        <div><p>Ru</p></div>
-        <div><p>Rh</p></div>
-        <div><p>Pd</p></div>
-        <div><p>Ag</p></div>
-        <div><p>Cd</p></div>
-        <div><p>In</p></div>
-        <div><p>Sn</p></div>
-        <div><p>Sb</p></div>
-        <div><p>Te</p></div>
-        <div><p>I</p></div>
-        <div><p>Xe</p></div>
-        <div><p>Cs</p></div>
-        <div><p>Ra</p></div>
-        <div><p>*</p></div>
-        <div><p>Ta</p></div>
-        <div><p>W</p></div>
-        <div><p>Re</p></div>
-        <div><p>Os</p></div>
-        <div><p>Ir</p></div>
-        <div><p>Pt</p></div>
-        <div><p>Au</p></div>
-        <div><p>Hg</p></div>
-        <div><p>Tl</p></div>
-        <div><p>Pb</p></div>
-        <div><p>Bi</p></div>
-        <div><p>Po</p></div>
-        <div><p>At</p></div>
-        <div><p>Rn</p></div>
-        <div><p>Fr</p></div>
-        <div><p>Ra</p></div>
-        <div><p>**</p></div>
-        <div><p>Rf</p></div>
-        <div><p>Db</p></div>
-        <div><p>Sg</p></div>
-        <div><p>Bh</p></div>
-        <div><p>Hs</p></div>
-        <div><p>Mt</p></div>
-        <div><p>Ds</p></div>
-        <div><p>Rg</p></div>
-        <div><p>Cn</p></div>
-        <div><p>Unt</p></div>
-        <div><p>Fl</p></div>
-        <div><p>Unp</p></div>
-        <div><p>Lv</p></div>
-        <div><p>Uus</p></div>
-        <div><p>Uuo</p></div>
+        <p>H</p>
+        <p>He</p>
+        <p>Li</p>
+        <p>Be</p>
+        <p>B</p>
+        <p>C</p>
+        <p>N</p>
+        <p>O</p>
+        <p>F</p>
+        <p>Ne</p>
+        <p>Na</p>
+        <p>MG</p>
+        <p>Al</p>
+        <p>Si</p>
+        <p>P</p>
+        <p>S</p>
+        <p>Cl</p>
+        <p>Ar</p>
+        <p>K</p>
+        <p>Ca</p>
+        <p>Sc</p>
+        <p>Ti</p>
+        <p>V</p>
+        <p>Cr</p>
+        <p>Mn</p>
+        <p>Fe</p>
+        <p>Co</p>
+        <p>Ni</p>
+        <p>Cu</p>
+        <p>Zn</p>
+        <p>Ga</p>
+        <p>Ge</p>
+        <p>As</p>
+        <p>Se</p>
+        <p>Br</p>
+        <p>Kr</p>
+        <p>Rb</p>
+        <p>Sr</p>
+        <p>Y</p>
+        <p>Zr</p>
+        <p>Nb</p>
+        <p>Mo</p>
+        <p>Tc</p>
+        <p>Ru</p>
+        <p>Rh</p>
+        <p>Pd</p>
+        <p>Ag</p>
+        <p>Cd</p>
+        <p>In</p>
+        <p>Sn</p>
+        <p>Sb</p>
+        <p>Te</p>
+        <p>I</p>
+        <p>Xe</p>
+        <p>Cs</p>
+        <p>Ra</p>
+        <p>*</p>
+        <p>Ta</p>
+        <p>W</p>
+        <p>Re</p>
+        <p>Os</p>
+        <p>Ir</p>
+        <p>Pt</p>
+        <p>Au</p>
+        <p>Hg</p>
+        <p>Tl</p>
+        <p>Pb</p>
+        <p>Bi</p>
+        <p>Po</p>
+        <p>At</p>
+        <p>Rn</p>
+        <p>Fr</p>
+        <p>Ra</p>
+        <p>**</p>
+        <p>Rf</p>
+        <p>Db</p>
+        <p>Sg</p>
+        <p>Bh</p>
+        <p>Hs</p>
+        <p>Mt</p>
+        <p>Ds</p>
+        <p>Rg</p>
+        <p>Cn</p>
+        <p>Unt</p>
+        <p>Fl</p>
+        <p>Unp</p>
+        <p>Lv</p>
+        <p>Uus</p>
+        <p>Uuo</p>
     </section>
 
     <footer>
